# turns2d_urans_git

./: Makefile  Makefile.am  Makefile.in  README  bak.configure.ac  config.status  config.status.lineno  configure  configure.lineno  debug-flags
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
config/: rules.mk
ihc/: Makefile  Makefile.am  Makefile.in
ihc/src/: Makefile  Makefile.am  Makefile.in  ihc.f90  main.f  octree.f90
src/: Makefile  Makefile.am  Makefile.in  Turns_overset.f  bak.bc.f  bak.init.f  bc.f  connectivity.f  eulerrhs.f  forces.f  gammatheta.h  gettimemetrics_tef_ts.f  init.f  io.f  komega.h  komegasst.f  lhs.f  modules.f  motion.f  new_samodel2d.f  objectivef_ts.f  objectives.f  sa_gammatheta.f  sadata.h  samodel2d.f  setup.f  sources.f  sst_gammatheta.f  step.f  tef.f  tef_ts.f  time.f  visrhs.f
src/adjoints/: Makefile  Makefile.am  Makefile.in  Makefile_adjoints  Sensitivity.f  Sensitivity.f.diff  Turns_adjoints.f  Turns_adjoints.f.diff  adBuffer.f  adStack.c  bak.bcwall_bq.f  bak.convec_bq.f  bak.diffus_bq.f  bak.init_ad.f  bak.io_ad.f  bak.lhs_ad.f  bak.samodel2d_ad.f  bak.source_bq.f  bc_ad.f  bc_bq.f  bcextp_bq.f  bcout_inf_bq.f  bcout_trkl_bq.f  bcperiodic_bq.f  bcsym_bq.f  bctany_bq.f  bcwake_bq.f  bcwall_bq.f  c_turm_bq.f  calc_cf_bo.f  calc_cp_bo.f  calc_norm_bo.f  cleanup.bash  connectivity_ad.f  convec_bq.f  diffus_bq.f  do_interpolations_ad.f  do_interpolations_tan.f  error_estimate.f  force2d_bq.f  (+39 more)
src/adjoints/.deps/: adStack.Po
utils/interpolation/: Makefile  Makefile.am  Makefile.in  connectivity.f  grid.f  input.f90  interpolate.f90  interpolators.f90  solution.f90
